# scte35-reader

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: lib.rs  upid.rs
