[package]
name = "scte35-reader"
version = "0.14.1-dev"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
description = "Reader for data formatted according to SCTE-35"
repository = "https://github.com/dholroyd/scte35-reader"
categories = [ "multimedia::video", "parser-implementations" ]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
mpeg2ts-reader = "0.15"
bitreader = "0.3.1"
serdebug = "1.0"
serde = "1.0"
serde_derive = "1.0"
hex-slice = "0.1.4"
url = "2.1.1"
smptera-format-identifiers-rust = "0.3.0"
log = "0.4"

[dev-dependencies]
hex-literal = "0.4.0"
matches = "0.1.6"
